using filters in api gateway

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -11,12 +11,17 @@ spring:
         - id: order-service
           uri: lb://ORDER-SERVICE
           predicates:
-            - Path=/orders/**
+            - Path=/api/v1/orders/**
+          filters:
+            - StripPrefix=2
 
         - id: inventory-service
           uri: lb://INVENTORY-SERVICE
           predicates:
-            - Path=/inventory/**
+            - Path=/api/v1/inventory/**
+          filters:
+              - StripPrefix=2
+              - AddRequestHeader=X-Custom-Header, Gaurav
 
 eureka:
   client:
